--- a/段落格式.md
+++ b/段落格式.md
@@ -1,4 +1,4 @@
-## 段落
+# mackdown 段落
 
 末尾添加两个空格  
 试试中间空一行
@@ -29,9 +29,5 @@ _ _ _
 <u>下划线</u>
 
 ## 脚注
-我要一个脚注  [^脚注]。
-[^脚注]: 菜鸟教程 -- 学的不仅是技术，更是梦想！！！
-
-创建脚注格式类似这样 [^RUNOOB]。
-
-[^RUNOOB]: 菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+我要一个脚注  [^jiaozhu]  
+[^jiaozhu]: 我是脚注啊！！！
